Versão 09.10:
Novidades:
#noticket: Atualização para o gradle 8.4.0 e da url de distribuição do gradle também
#noticket: Atualização das seguintes libs:
- androidx.appcompat:appcompat:1.7.0
- com.google.android.material:material:1.12.0
- androidx.recyclerview:recyclerview:1.3.2
- androidx.navigation:navigation-fragment:2.7.7
- androidx.navigation:navigation-ui:2.7.7
- com.google.android.gms:play-services-ads:23.2.0
- androidx.browser:browser:1.8.0
- androidx.core:core:1.13.1

Correções:

----------------------------------------------------------------------------------
Versão 01.08:
Novidades:
#noticket: Atualização para o gradle 7.4.2 e da url de distribuição do gradle também
#noticket: Atualização das seguintes libs:
- androidx.appcompat:appcompat:1.6.1
- com.google.android.material:material:1.9.0
- androidx.recyclerview:recyclerview:1.3.0
- com.google.android.gms:play-services-ads:22.1.0
- androidx.browser:browser:1.5.0

Correções:
#noticket: Comentado link de acesso ao site do pechincha legal para se adequar as políticas do ADMob

----------------------------------------------------------------------------------
Versão 01.07:
Novidades:
#noticket: Atualização de targetSdkVersion para API 33 (Android 13) e minSdkVersion para API 21
#noticket: Atualização para o gradle 7.2.0 e da url de distribuição do gradle também
#noticket: Atualização das seguintes libs:
- androidx.appcompat:appcompat:1.5.1
- androidx.constraintlayout:constraintlayout:2.1.4
- com.google.android.material:material:1.7.0
- androidx.navigation:navigation-fragment:2.5.3
- androidx.navigation:navigation-ui:2.5.3
- com.google.android.gms:play-services-ads:21.3.0
- androidx.core:core:1.9.0

Correções:

----------------------------------------------------------------------------------
Versão 01.06 (09.08):
Novidades:
#noticket: Criação de link de acesso ao site PechinchaLegal
#noticket: Atualização de targetSdkVersion para API 31 (Android 12)