@@ -1,3 +1,10 @@
+Versão 09.11:
+Novidades:
+#noticket: Atualização para o gradle 8.5.1 e da url de distribuição do gradle também
+
+Correções:
+
+----------------------------------------------------------------------------------
 Versão 09.10:
 Novidades:
 #noticket: Atualização para o gradle 8.4.0 e da url de distribuição do gradle também
